Mark built binary as executable in workflow.

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -34,6 +34,9 @@ jobs:
     - name: Test
       run: go test -v ./...
 
+    - name: Mark binary as executable
+      run: chmod +x vault-executable
+
     - uses: actions/upload-artifact@v3
       if: ${{ inputs.upload-binary }}
       with:
